--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Minesweeper</title>
+    <title>Mindschweeper</title>
+    <link href="https://fonts.googleapis.com/css?family=Frijole&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="minesweeper.css">
     <script src="lib/tests.js"></script>
     <script src="lib/lib.js"></script>
